--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.4"
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
