--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.1.4",
         "vite": "^2.9.11",
         "vue": "^3.2.31"
     },
     "dependencies": {
         "@headlessui/vue": "^1.6.5",
-        "@heroicons/vue": "^1.0.6"
+        "@heroicons/vue": "^1.0.6",
+        "vue-template-compiler": "^2.7.1"
     }
 }
